Exercícios de HTML feitos e capítulo de HTML se estruturando

--- a/Exercicios_JS/html/anatomiaHtml.html
+++ b/Exercicios_JS/html/anatomiaHtml.html
@@ -1,20 +1,28 @@
-<tag>
-    <!--Comentário--> 
-    <bla>
-        <opa>Texto</opa>
-        <opa>Texto</opa>
-        <opa>Texto</opa>
-        <opa>Texto</opa>
-        <opa>Texto</opa>
-    </bla>
-</tag>
+<!doctype html>
 
-<tag/> <meta/> <input/> <br/>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Anatomia HTML</title>
+        <link href="" rel="stylesheet" type="text/css">
+        <script src=""></script>
+    </head>
 
-<tag param1="valor1" param2='valor2'>
-    <!-- Corpo na tag-->
-</tag>
-
-<tag param1="valor1" param2='valor2'/>
-
-<input type="text" cpfMask>
+    <body>
+        <header>
+            <h1>Exercícios HTML</h1>
+            <nav>
+                <a href="/" target="blank">Navegação 1</a>
+            </nav>
+        </header>
+        <section id='conteudo'>
+            Conteúdo
+        </section>
+        <aside>
+            Lateral
+        </aside>
+        <footer>
+            Rodapé
+        </footer>
+    </body>
+</html>
