--- a/Exercicios_JS/html/index.html
+++ b/Exercicios_JS/html/index.html
@@ -16,8 +16,11 @@
         <h1>Exercícios HTML</h1>
     </header>
     <nav>
-        <a href="exercicios/teste.html">00 - Teste</a> |
-        <a href="exercicios/texto1.html">01 - Texto 1</a>
+        <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
+        <a href wm-nav="exercicios/texto1.html">01 - Texto 1</a> |
+        <a href wm-nav="exercicios/texto2.html">02 - Texto 2</a> |
+        <a href wm-nav="exercicios/listas.html">03 - Listas</a> |
+        <a href wm-nav="exercicios/listaAlinhada.html">04 - Lista Alinhada</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
@@ -29,7 +32,7 @@
         document.querySelectorAll('a').forEach(link=>{
             link.onclick = function(e){
                 e.preventDefault();
-                fetch(link.getAttribute('href'))
+                fetch(link.getAttribute('wm-nav'))
                     .then(conteudo => conteudo.text())
                     .then(conteudoText => conteudo.innerHTML = conteudoText);
             }
