Aula de âncoras realizada (HTML)

--- a/Exercicios_JS/html/exercicios/links.html
+++ b/Exercicios_JS/html/exercicios/links.html
@@ -1,4 +1,4 @@
-<h1>Links</h1>
+<h1 id="inicio">Links</h1>
 
 <!-- URL Absoluta -->
 
@@ -9,3 +9,15 @@
 <a href="index.html">Voltar 1</a><br> <!-- Tentar buscar o 'index.html' da pasta atual -->
 <a href="/index.html">Voltar 2</a><br> <!-- Tentar buscar o 'index.html' da raíz -->
 <a href="../index.html">Voltar 3</a><br> <!-- Irá voltar uma pasta para então buscar o 'index.html'-->
+
+<!-- E-Mail -->
+
+<a href="mailto:lucas.afsantos@hotmail.com">Entre em contato</a><br>
+
+<a href="#noticia">Ir para a notícia</a>
+
+<div id="noticia" style="position:absolute; top:2000px">
+    <h1>Notícia Buemba!</h1>
+    <p>Não era nada... :)</p>
+    <a href="#inicio">Voltar ao topo</a>
+</div>
