--- a/Exercicios_JS/vue/exercicios/ifFor.html
+++ b/Exercicios_JS/vue/exercicios/ifFor.html
@@ -7,9 +7,42 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p v-for="(aluno,i) in alunos">
+            {{i+1}} - {{aluno.nome}}, nota: {{aluno.nota}} 
+            <span v-if="aluno.nota>=7">(Aprovado)</span>
+            <span v-else-if="aluno.nota>=4">(Recuperação)</span>
+            <span v-else>(Reprovado)</span>
+        </p>
+    </div>
     <script>
-        // ...
+        
+        // Enquanto no v-if, ele remove o elemento enquanto o mesmo não atende aos requisitos, no v-show ele esconde.
+
+        new Vue({
+            el:'#app',
+            data:{
+                alunos: [
+                    {
+                        nome:'Ana',
+                        nota:7.8
+                    },
+                    {
+                        nome:'Lucas',
+                        nota:10.0
+                    },
+                    {
+                        nome:'Carlos',
+                        nota:6.5
+                    },   
+                    {
+                        nome:'Luciana',
+                        nota:3.0
+                    },                     
+                ]
+            }
+        });
+
     </script>
 </body>
 </html>
