--- a/Exercicios_JS/html/exercicios/form/form.html
+++ b/Exercicios_JS/html/exercicios/form/form.html
@@ -1,5 +1,6 @@
 <h1>Formulário</h1>
-<form action='http://localhost:3003/usuarios' method='POST'>
+<form method='POST'>
+    <input type='hidden' name='id' value="3">
     <input type='text' name='nome' placeholder="Insira seu nome">
     <input type="password" name="senha">
     <textarea name="bio" cols="30" rows="10"></textarea>
@@ -24,7 +25,8 @@
         <option value="go">Go</option>
         <option value="c">C</option>
     </select>
-    <button>Inserir</button>
+    <button formaction="http://localhost:3003/usuarios">Inserir</button>
+    <button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
 
 <style>
