--- a/Exercicios_JS/vue/exercicios/componente.html
+++ b/Exercicios_JS/vue/exercicios/componente.html
@@ -7,9 +7,28 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
+    <div id="app">
+        <saudacao nome="Lucas"></saudacao>
+        <saudacao nome="Bia"></saudacao>
+        <saudacao nome="Ana"></saudacao>
+    </div>
 
     <script>
-        // ...
+        Vue.component('saudacao',{
+            props: ['nome'],
+            data: function(){
+                return {
+                    contador:0
+                }
+            },
+            template: `
+                <div>Bom dia {{nome}}!</div>
+            `
+        });
+        new Vue({
+            el:"#app",
+        })
     </script>
+
 </body>
 </html>
