--- a/Exercicios_JS/vue/qrcode/index.html
+++ b/Exercicios_JS/vue/qrcode/index.html
@@ -11,8 +11,41 @@
 
 <body>
 
+    <div id="app">
+        <qrcode></qrcode>
+    </div>
+
     <script>
-        // ...
+        Vue.component('qrcode', {
+            data: function () {
+                return {
+                    title: "Gerador QRCode",
+                    text: "https://www.cod3r.com.br",
+                    qrcode: new QRious({ size: 300 })
+                }
+            },
+            computed: {
+                newQRCode() {
+                    this.qrcode.value = this.text;
+                    return this.qrcode.toDataURL();
+                }
+            },
+            template: `
+                <div>
+                    <h1>{{title}}</h1>
+                    <div>
+                        <input type="text" v-model="text" placeholder="Digite para gerar">
+                    </div>
+                    <div v-if="text" class="output">
+                        <img :src="newQRCode" alt="QRCode">
+                    </div>
+                </div>
+            `
+
+        });
+        new Vue({
+            el: "#app",
+        });
     </script>
 </body>
 
